fix: install inkscape, add `--ignore-latex-errors`

--- a/template/index.html
+++ b/template/index.html
@@ -20,7 +20,7 @@
         <label for="main_tex">Main tex filename:</label>
         <input id="main_tex" type = "text" name = "main_tex" /><br><br>
         <label for="other_options">Other git-latexdiff options:</label>
-        <input id="other_options" type = "text" name = "other_options" value="--latexopt -shell-escape" /><br><br>
+        <input id="other_options" type = "text" name = "other_options" value="--latexopt -shell-escape --ignore-latex-errors" /><br><br>
         <input type="submit" value="Submit"/>
     </form>
 <script>
